--- a/styles.css
+++ b/styles.css
@@ -1,2 +1,24 @@
 
 /* Your CSS Code here. */
+.holder{
+	display: flex;
+	flex-direction: row;
+	justify-content: center;
+	flex-wrap: wrap;
+}
+.box{
+	width:  100px;
+	height: 100px
+	display: flex;
+	
+	
+}
+.box1{
+	background: green;
+}
+.box2{
+	background: red;
+}
+.box3{
+	background: blue;
+}
